outputs/runtime/admin-restart.err.log
⚠ Slow filesystem detected. The benchmark took 838ms. If E:\Mohandseto Tawrdat\apps\admin_web\.next/dev is a network drive, consider moving it to a local folder.
See more: https://nextjs.org/docs/app/guides/local-development
⨯ TypeError: fetch failed
    at async POST (app\api\session\login\route.ts:8:20)
   6 | export async function POST(request: Request) {
   7 |   const body = await request.json();
>  8 |   const response = await fetch(`${apiBaseUrl}/api/auth/login`, {
     |                    ^
   9 |     method: "POST",
  10 |     headers: { "Content-Type": "application/json" },
  11 |     body: JSON.stringify(body), {
  [cause]: AggregateError: 
      at ignore-listed frames {
    code: 'ECONNREFUSED',
    [errors]: [ [Error], [Error] ]
  }
}
⨯ TypeError: fetch failed
    at async POST (app\api\session\login\route.ts:8:20)
   6 | export async function POST(request: Request) {
   7 |   const body = await request.json();
>  8 |   const response = await fetch(`${apiBaseUrl}/api/auth/login`, {
     |                    ^
   9 |     method: "POST",
  10 |     headers: { "Content-Type": "application/json" },
  11 |     body: JSON.stringify(body), {
  [cause]: AggregateError: 
      at ignore-listed frames {
    code: 'ECONNREFUSED',
    [errors]: [ [Error], [Error] ]
  }
}
⨯ TypeError: fetch failed
    at async POST (app\api\session\login\route.ts:8:20)
   6 | export async function POST(request: Request) {
   7 |   const body = await request.json();
>  8 |   const response = await fetch(`${apiBaseUrl}/api/auth/login`, {
     |                    ^
   9 |     method: "POST",
  10 |     headers: { "Content-Type": "application/json" },
  11 |     body: JSON.stringify(body), {
  [cause]: AggregateError: 
      at ignore-listed frames {
    code: 'ECONNREFUSED',
    [errors]: [ [Error], [Error] ]
  }
}
